Improve ripme caching

--- a/script/app/ripme/rip-base.properties
+++ b/script/app/ripme/rip-base.properties
@@ -2,7 +2,7 @@
 threads.size = 5
 
 # Overwrite existing files
-file.overwrite = true
+file.overwrite = false
 
 # Number of retries on failed downloads
 download.retries = 1
