--- a/script/docker/Dockerfile.template
+++ b/script/docker/Dockerfile.template
@@ -1,31 +1,118 @@
-FROM ubuntu:18.04
+FROM rabbitmq:3-management
 
-RUN apt-get update -y
+# -- INSTALL POSTGRESQL - Custom because the official dockerfile based on debian had a bunch of errors in ubuntu
+RUN apt-get update
+RUN apt-get install -y postgresql postgresql-contrib
 
-RUN apt-get install -y curl sudo wget gnupg2
+# -- INSTALL NGINX - Based on https://github.com/nginxinc/docker-nginx/blob/e5123eea0d29c8d13df17d782f15679458ff899e/mainline/stretch/Dockerfile
+ENV NGINX_VERSION 1.15.12-1~stretch
+ENV NJS_VERSION   1.15.12.0.3.1-1~stretch
 
-RUN apt-get install -y python3 ffmpeg default-jre
+RUN set -x \
+	&& apt-get install --no-install-recommends --no-install-suggests -y gnupg1 apt-transport-https ca-certificates \
+	&& \
+	NGINX_GPGKEY=573BFD6B3D8FBC641079A6ABABF5BD827BD9BF62; \
+	found=''; \
+	for server in \
+		ha.pool.sks-keyservers.net \
+		hkp://keyserver.ubuntu.com:80 \
+		hkp://p80.pool.sks-keyservers.net:80 \
+		pgp.mit.edu \
+	; do \
+		echo "Fetching GPG key $NGINX_GPGKEY from $server"; \
+		apt-key adv --keyserver "$server" --keyserver-options timeout=10 --recv-keys "$NGINX_GPGKEY" && found=yes && break; \
+	done; \
+	test -z "$found" && echo >&2 "error: failed to fetch GPG key $NGINX_GPGKEY" && exit 1; \
+	apt-get remove --purge --auto-remove -y gnupg1 && rm -rf /var/lib/apt/lists/* \
+	&& dpkgArch="$(dpkg --print-architecture)" \
+	&& nginxPackages=" \
+		nginx=${NGINX_VERSION} \
+		nginx-module-xslt=${NGINX_VERSION} \
+		nginx-module-geoip=${NGINX_VERSION} \
+		nginx-module-image-filter=${NGINX_VERSION} \
+		nginx-module-njs=${NJS_VERSION} \
+	" \
+	&& case "$dpkgArch" in \
+		amd64|i386) \
+# arches officialy built by upstream
+			echo "deb https://nginx.org/packages/mainline/debian/ stretch nginx" >> /etc/apt/sources.list.d/nginx.list \
+			&& apt-get update \
+			;; \
+		*) \
+# we're on an architecture upstream doesn't officially build for
+# let's build binaries from the published source packages
+			echo "deb-src https://nginx.org/packages/mainline/debian/ stretch nginx" >> /etc/apt/sources.list.d/nginx.list \
+			\
+# new directory for storing sources and .deb files
+			&& tempDir="$(mktemp -d)" \
+			&& chmod 777 "$tempDir" \
+# (777 to ensure APT's "_apt" user can access it too)
+			\
+# save list of currently-installed packages so build dependencies can be cleanly removed later
+			&& savedAptMark="$(apt-mark showmanual)" \
+			\
+# build .deb files from upstream's source packages (which are verified by apt-get)
+			&& apt-get update \
+			&& apt-get build-dep -y $nginxPackages \
+			&& ( \
+				cd "$tempDir" \
+				&& DEB_BUILD_OPTIONS="nocheck parallel=$(nproc)" \
+					apt-get source --compile $nginxPackages \
+			) \
+# we don't remove APT lists here because they get re-downloaded and removed later
+			\
+# reset apt-mark's "manual" list so that "purge --auto-remove" will remove all build dependencies
+# (which is done after we install the built packages so we don't have to redownload any overlapping dependencies)
+			&& apt-mark showmanual | xargs apt-mark auto > /dev/null \
+			&& { [ -z "$savedAptMark" ] || apt-mark manual $savedAptMark; } \
+			\
+# create a temporary local APT repo to install from (so that dependency resolution can be handled by APT, as it should be)
+			&& ls -lAFh "$tempDir" \
+			&& ( cd "$tempDir" && dpkg-scanpackages . > Packages ) \
+			&& grep '^Package: ' "$tempDir/Packages" \
+			&& echo "deb [ trusted=yes ] file://$tempDir ./" > /etc/apt/sources.list.d/temp.list \
+# work around the following APT issue by using "Acquire::GzipIndexes=false" (overriding "/etc/apt/apt.conf.d/docker-gzip-indexes")
+#   Could not open file /var/lib/apt/lists/partial/_tmp_tmp.ODWljpQfkE_._Packages - open (13: Permission denied)
+#   ...
+#   E: Failed to fetch store:/var/lib/apt/lists/partial/_tmp_tmp.ODWljpQfkE_._Packages  Could not open file /var/lib/apt/lists/partial/_tmp_tmp.ODWljpQfkE_._Packages - open (13: Permission denied)
+			&& apt-get -o Acquire::GzipIndexes=false update \
+			;; \
+	esac \
+	\
+	&& apt-get install --no-install-recommends --no-install-suggests -y \
+						$nginxPackages \
+						gettext-base
 
-RUN apt-get install -y python3-pip
+STOPSIGNAL SIGTERM
 
-RUN ln -s /usr/bin/python3 /usr/bin/python
+RUN apt-get install -y supervisor
 
-RUN ln -s /usr/bin/pip3 /usr/bin/pip
+# -- INSTALL MEDIACRITY
 
-ADD script/docker/entrypoint.sh /root/script/docker-entrypoint.sh
+RUN apt-get install -y python3 python3-pip ffmpeg default-jre
 
-ADD script/docker/launch.sh /root/script/launch.sh
+ADD script/docker/nginx.conf /etc/nginx/nginx.conf
 
-RUN chmod +x /root/script/*.sh
+ADD script/docker/supervisord.conf /etc/supervisor/supervisord.conf
 
-ADD ./ /mediacrity
+ADD ./ /mediacrity/app
 
-WORKDIR /mediacrity
+WORKDIR /mediacrity/app
 
-RUN pip install -r requirements.txt
+RUN /usr/bin/pip3 install -r requirements.txt
 
-VOLUME [ "/mediacrity/log", "/mediacrity/config" ]
+RUN mkdir -p /mediacrity/log && mkdir -p /mediacrity/config && mkdir -p /mediacrity/data && mkdir -p /mediacrity/media
 
-ENTRYPOINT [ "/root/script/docker-entrypoint.sh" ]
+RUN chmod -R 777 /mediacrity/data
 
-CMD [ "/bin/bash","-c","/root/script/launch.sh" ]
+RUN chmod -R 777 /mediacrity/log
+
+RUN mkdir -p "/mediacrity/data/postgres" && chown -R postgres:postgres "/mediacrity/data/postgres" && chmod 777 "/mediacrity/data/postgres"
+
+ENV LANG en_US.utf8
+
+VOLUME ["/mediacrity/log", "/mediacrity/config", "/mediacrity/data", "/mediacrity/media"]
+
+ENTRYPOINT []
+
+CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
