--- a/script/docker/nginx.conf
+++ b/script/docker/nginx.conf
@@ -1,8 +1,9 @@
 
 user  root;
 worker_processes  1;
+daemon off;
 
-error_log  /var/log/nginx/error.log warn;
+error_log  /dev/stdout warn;
 pid        /var/run/nginx.pid;
 
 
@@ -19,7 +20,7 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log  /var/log/nginx/access.log  main;
+    access_log  /dev/stdout  main;
 
     sendfile        on;
     #tcp_nopush     on;
