Initial tests on monolithic container almost passing

--- a/script/docker/nginx.conf
+++ b/script/docker/nginx.conf
@@ -35,8 +35,12 @@ http {
 
       root /mediacrity;
 
-      location / {
-        try_files $uri $uri/ =404;
+      location /asset {
+        alias /mediacrity/asset;
+      }
+
+      location /media {
+        alias /mediacrity/media;
       }
     }
 }
