--- a/script/docker/Dockerfile.template
+++ b/script/docker/Dockerfile.template
@@ -93,7 +93,9 @@ RUN apt-get install -y python3 python3-pip ffmpeg default-jre
 
 ADD script/docker/nginx.conf /etc/nginx/nginx.conf
 
-ADD script/docker/supervisord.conf /etc/supervisor/supervisord.conf
+ADD script/docker/postgresql.conf /etc/postgresql/10/main/postgresql.conf
+
+RUN chown postgres:postgres /etc/postgresql/10/main/postgresql.conf
 
 ADD ./ /mediacrity/app
 
@@ -115,4 +117,4 @@ VOLUME ["/mediacrity/log", "/mediacrity/config", "/mediacrity/data", "/mediacrit
 
 ENTRYPOINT []
 
-CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/supervisord.conf"]
+CMD ["/bin/bash", "-c", "/mediacrity/app/script/docker/supervisor.sh"]
