Local dev working against containerized services

--- a/script/docker/supervisord-full.conf
+++ b/script/docker/supervisord-full.conf
@@ -13,7 +13,7 @@ stdout_logfile=/mediacrity/log/rabbit-out.log
 stderr_logfile=/mediacrity/log/rabbit-err.log
 
 [program:postgresql]
-command=/mediacrity/app/script/docker/postgres-launch.sh postgres -D /mediacrity/data/postgres
+command=/mediacrity/app/script/docker/postgres-launch.sh postgres -i -D /mediacrity/data/postgres
 user=postgres
 autostart=true
 autorestart=true
