--- a/script/docker/pg_hba.conf
+++ b/script/docker/pg_hba.conf
@@ -88,4 +88,4 @@ local   all             postgres                                peer
 
 # "local" is for Unix domain socket connections only
 local   all             all                                     peer
-host    all             all             0.0.0.0/0               trust
+host    all             all             0.0.0.0/0               md5
