--- a/script/docker/supervisord-services.conf
+++ b/script/docker/supervisord-services.conf
@@ -13,13 +13,13 @@ stdout_logfile=/mediacrity/log/rabbit-out.log
 stderr_logfile=/mediacrity/log/rabbit-err.log
 
 [program:postgresql]
-command=/mediacrity/app/script/docker/postgres-launch.sh postgres -D /mediacrity/data/postgres
+command=/mediacrity/app/script/docker/postgres-launch.sh postgres -i -D /mediacrity/data/postgres
 user=postgres
 autostart=true
 autorestart=true
 startsecs=5
-stdout_logfile=/mediacrity/log/postgres-out.log
 stderr_logfile=/mediacrity/log/postgres-err.log
+stdout_logfile=/mediacrity/log/postgres-out.log
 
 [program:nginx]
 command=/usr/sbin/nginx
