--- a/script/docker/Dockerfile.template
+++ b/script/docker/Dockerfile.template
@@ -103,6 +103,8 @@ RUN chown postgres:postgres /etc/postgresql/10/main/pg_hba.conf
 
 ADD ./ /mediacrity/app
 
+ADD ./asset /mediacrity/asset
+
 WORKDIR /mediacrity/app
 
 RUN /usr/bin/pip3 install -r requirements.txt
