Decrease video thumbnail generation time by 100x. Better media detection on disk

--- a/script/docker/nginx.conf
+++ b/script/docker/nginx.conf
@@ -23,11 +23,8 @@ http {
     access_log  /dev/stdout  main;
 
     sendfile        on;
-    #tcp_nopush     on;
 
     keepalive_timeout  65;
-
-    #gzip  on;
 
     server {
       listen 80 default_server;
@@ -37,10 +34,12 @@ http {
 
       location /asset {
         alias /mediacrity/asset;
+        autoindex on;
       }
 
       location /media {
         alias /mediacrity/media;
+        autoindex on;
       }
     }
 }
