--- a/script/docker/Dockerfile.template
+++ b/script/docker/Dockerfile.template
@@ -85,17 +85,21 @@ RUN set -x \
 
 STOPSIGNAL SIGTERM
 
-RUN apt-get install -y supervisor
-
-# -- INSTALL MEDIACRITY
-
-RUN apt-get install -y python3 python3-pip ffmpeg default-jre
-
 ENV DEBIAN_FRONTEND noninteractive
 
-RUN apt-get install -y imagemagick ecryptfs-utils
+RUN apt-get install -y supervisor python3 python3-pip ffmpeg default-jre imagemagick sudo curl
 
-RUN apt-get install -y sudo
+# -- INSTALL gocryptfs
+
+RUN curl -L https://github.com/rfjakob/gocryptfs/releases/download/v1.8.0/gocryptfs_v1.8.0_linux-static_amd64.tar.gz > gocryptfs.tar.gz
+
+RUN tar -xvf gocryptfs.tar.gz
+
+RUN mv gocryptfs /usr/bin/gocryptfs
+
+RUN chmod +x /usr/bin/gocryptfs
+
+# -- INSTALL MEDIACRITY
 
 ADD script/docker/nginx.conf /etc/nginx/nginx.conf
 
